--- a/website/templates/website/password_change.html
+++ b/website/templates/website/password_change.html
@@ -1,5 +1,5 @@
 {% extends 'website/layout.html' %}
-{% block title %}Edit Profile{% endblock %}
+{% block title %}Edit Password{% endblock %}
 {% block profileactive %}active{% endblock %}
 {% block body %}
     <div class="container-fluid">
@@ -15,8 +15,7 @@
                         </ul>
                     {% endif %}
                     {% include 'website/messages.html' %}
-                    {% include 'website/form.html' with form=userForm %}
-                    {% include 'website/form.html' with form=profileForm %}
+                    {% include 'website/form.html' with form=form %}
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
