change footer to use a flex box so it behaves well with responsive design

--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -75,9 +75,11 @@
 </header>
 {% block body%}{% endblock %}
 <footer class="footer">
-    <p>Copyright &copy; 2018, Boise State University and Bowling Green State University. All rights reserved.<br/>
-    This material is based upon work supported by the US National Science Foundation (NSF) under grants CNS-18-23357, CNS-18-23294.<br/>
-    Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.</p>
+    <p class="text-muted">
+        Copyright &copy; 2018, Boise State University and Bowling Green State University. All rights reserved.<br/>
+        This material is based upon work supported by the US National Science Foundation (NSF) under grants CNS-18-23357, CNS-18-23294.<br/>
+        Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.
+    </p>
 </footer>
 </body>
 </html>
