--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -2,24 +2,25 @@
     border-radius: 0;
 }
 
-html {
-    position: relative;
-    min-height: 100%;
+html, body {
+    height: 100%;
 }
 
 body {
-    margin-bottom: 15px;
+    display: flex;
+    flex-flow: column;
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
+    margin-top: auto;
     width: 100%;
-    height: 65px;
-    line-height: 15px;
+    line-height: 1em;
     padding: 0.5em;
-    padding-bottom: 0;
     background-color: #f5f5f5;
+}
+
+.footer .text-muted {
+    margin-bottom: 0;
 }
 
 .top-buffer {
