--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'website:index' %}"> PACLab </a>
+            <a class="navbar-brand" href="{% url 'website:index' %}"> PAClab </a>
         </div>
 
         <!--Navbar Links-->
