--- a/website/templates/website/papers.html
+++ b/website/templates/website/papers.html
@@ -2,7 +2,7 @@
 {% block title %}{{ paper }}{% endblock %}
 {% block papersactive %}active{% endblock %}
 {% block body %}
-    <div class="container">
+    <div class="container-fluid">
         <h1>Papers</h1>
         <table class="table">
             <thead>
