Selector view now includes messages

--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -10,13 +10,7 @@
             {% endif %}
             <form class="form-horizontal" method="POST" action="">
                 {% csrf_token %}
-                {% if messages %}
-                    <ul class="messages">
-                        {% for message in messages%}
-                            <li class="{{ message.tags }}">{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+                {% include 'website/messages.html' %}
                 <div class="row">
                     <div class="col-md-2">
                         <label>Selection</label>
