--- a/website/templates/website/form.html
+++ b/website/templates/website/form.html
@@ -16,7 +16,7 @@
     {% if form.is_bound and field.errors %}
         <div class="form-group has-error has-feedback">
     {% else %}
-        <div class="form-group">
+        <div class="form-group form-row">
     {% endif %}
         {{ field.label_tag }}
 
