--- a/website/templates/website/photoinput.html
+++ b/website/templates/website/photoinput.html
@@ -1,4 +1,4 @@
-{% if widget.is_initial %}{{ widget.initial_text }}:<br/><img width="{{ widget.value.width }}" height="{{ widget.value.height }}" src="{{ widget.value.url }}" />{% if not widget.required %}
+{% if widget.is_initial %}<span id="id_{{widget.name}}_initial_text">{{ widget.initial_text }}:</span><br/><img id="id_{{widget.name}}_preview" width="{{ widget.value.width }}" height="{{ widget.value.height }}" src="{{ widget.value.url }}" />{% if not widget.required %}
 <input type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}">
 <label for="{{ widget.checkbox_id }}">{{ widget.clear_checkbox_label }}</label>{% endif %}<br>
 {{ widget.input_text }}:{% endif %}
