fix render bug with crop box going outside dialog

--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -115,7 +115,9 @@
                         <h4 class="modal-title">Crop the photo</h4>
                     </div>
                     <div class="modal-body">
-                        <img src="" id="image" style="max-width: 100%;">
+                        <div>
+                            <img src="" id="image" style="max-width: 100%;">
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <div class="btn-group pull-left" role="group">
