focus accept button so enter key crops and accepts

--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -44,6 +44,7 @@
                     $image.cropper("setDragMode", "move");
                 }
             });
+            $('.js-crop-and-upload').focus()
         }).on("hide.bs.modal", function () {
             if (saving === false) {
                 resetPhoto();
