--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'website:index' %}"> PAClab </a>
+            <a class="navbar-brand" href="{% url 'website:index' %}"> PACLab </a>
         </div>
 
         <!--Navbar Links-->
@@ -76,11 +76,9 @@
 </header>
 {% block body%}{% endblock %}
 <footer class="footer">
-    <p class="text-muted">
-        Copyright &copy; 2018, Boise State University and Bowling Green State University. All rights reserved.<br/>
-        This material is based upon work supported by the US National Science Foundation (NSF) under grants CNS-18-23357, CNS-18-23294.<br/>
-        Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.
-    </p>
+    <p>Copyright &copy; 2018, Boise State University and Bowling Green State University. All rights reserved.<br/>
+    This material is based upon work supported by the US National Science Foundation (NSF) under grants CNS-18-23357, CNS-18-23294.<br/>
+    Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.</p>
 </footer>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" integrity="sha384-vhJnz1OVIdLktyixHY4Uk3OHEwdQqPppqYR8+5mjsauETgLOcEynD9oPHhhz18Nw" crossorigin="anonymous"></script>
