--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -48,8 +48,7 @@
 </div>
 {% endblock %}
 
-{% block custom_js %}
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+{% block script %}
 <script type="text/javascript">
 function updateElementIndex(el, prefix, ndx) {
     var id_regex = new RegExp('(' + prefix + '-\\d+)');
@@ -127,6 +126,5 @@ $('select').change(function (){
         }
     });
 });
-
 </script>
 {% endblock %}
