--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,5 +1,5 @@
 {% extends 'website/layout.html' %}
-{% block title %}PAClab - Home{% endblock %}
+{% block title %}Home{% endblock %}
 {% block body %}
     <div class="container">
         {% include 'website/messages.html' %}
