--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Layout{% endblock %}</title>
+    <title>PAClab - {% block title %}PAClab{% endblock %}</title>
     {% load staticfiles %}
 
     <!--Bootstrap-->
