fix paper page titles

--- a/website/templates/website/paperDetails.html
+++ b/website/templates/website/paperDetails.html
@@ -1,5 +1,5 @@
 {% extends 'website/layout.html' %}
-{% block title %}{{ papers }}{% endblock %}
+{% block title %}Papers - {{ papers.title }}{% endblock %}
 {%block body %}
     <div class="container-fluid">
         <div class="panel panel-default">
