--- a/website/templates/website/papers.html
+++ b/website/templates/website/papers.html
@@ -1,5 +1,5 @@
 {% extends 'website/layout.html' %}
-{% block title %}{{ paper }}{% endblock %}
+{% block title %}Papers{% endblock %}
 {% block papersactive %}active{% endblock %}
 {% block body %}
     <div class="container-fluid">
