--- a/website/templates/website/papers.html
+++ b/website/templates/website/papers.html
@@ -3,7 +3,10 @@
 {% block papersactive %}active{% endblock %}
 {% block body %}
     <div class="container-fluid">
-        <h1>Papers</h1>
+        <h1>Publications related to PAClab</h1>
+        <p>
+            If you have used PAClab in a research paper, please <a href="{% url 'website:people' %}">contact us</a> and let us know so we can include the publication in this list!
+        </p>
         <table class="table">
             <thead>
                 <tr>
