--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -54,8 +54,8 @@
                         <a href="{% url 'website:login' %}">Login</a>
                     </li>
                 {% else %}
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><img class="img-rounded" src="{{ user.profile.photo.url }}" width="25" height="25" /> <span class="caret"></span></a>
+                    <li class="dropdown profile-dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><img class="img-rounded img-responsive" width="38" height="38" src="{{ user.profile.photo.url }}"  /> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="{% url 'website:editProfile' %}">Your profile</a></li>
                             {% if user.is_staff %}
