--- a/website/templates/website/password_change.html
+++ b/website/templates/website/password_change.html
@@ -1,5 +1,5 @@
 {% extends 'website/layout.html' %}
-{% block title %}Edit Password{% endblock %}
+{% block title %}Change Password{% endblock %}
 {% block profileactive %}active{% endblock %}
 {% block body %}
     <div class="container-fluid">
