--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
-{% load hijack_tags %}
+{% if USE_HIJACK == True %}
+{% include 'website/hijackTags.html' %}
+{% endif %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,7 +17,9 @@
     {% block style %}{% endblock %}
 </head>
 <body>
-{% hijack_notification %}
+{% if USE_HIJACK %}
+{% include 'website/hijackNotificaiton.html'%}
+{% endif %}
 <header>
     <nav class="navbar navbar-default">
         <!--Main Buttons-->
