Add list view for projects

--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -63,6 +63,7 @@
                             {% endif %}
                             <li role="separator" class="divider"></li>
                             <li><a href="{% url 'website:project_selection' %}">New project selection</a></li>
+                            <li><a href="{% url 'website:project_list' %}">List project selections</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{% url 'website:logout' %}">Sign out</a></li>
                         </ul>
