Add missing colon

--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -12,7 +12,7 @@
                 <thead>
                     <tr>
                         <th>Project Name:</th>
-                        <th>Input Dataset</th>
+                        <th>Input Dataset:</th>
                     </tr>
                 </thead>
 
