--- a/website/templates/website/login.html
+++ b/website/templates/website/login.html
@@ -20,6 +20,7 @@
             <div class="panel-body">
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
+                    {% include 'website/messages.html' %}
                     {% include 'website/form.html' with form=form %}
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
