--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -24,7 +24,11 @@ body {
 }
 
 .top-buffer {
-    margin-top:20px;
+    margin-top: 20px;
+}
+
+.cookiebanner {
+    margin-bottom: 0;
 }
 
 /* for dragging modal dialogs */
