--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -88,5 +88,12 @@
         Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.
     </p>
 </footer>
+<div id="CookiesBanner" class="alert alert-info cookiebanner" style="display: none;">
+    <h4>Cookies Disclaimer</h4>
+    <p>
+        <a class="btn btn-primary pull-right" href="javascript:CookiesBanner.createCookiesBannerCookie();">I agree</a>
+        Our site saves small pieces of text information (cookies) on your device in order to deliver better content and for statistical purposes. You can disable the usage of cookies by changing the settings of your browser. By browsing our website without changing the browser settings you grant us permission to store that information on your device.
+    </p>
+</div>
 </body>
 </html>
