--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -14,6 +14,7 @@
                         <th>Project Hash:</th>
                         <th>Created:</th>
                         <th>Filters:</th>
+                        <th>Options:</th>
                     </tr>
                 </thead>
 
@@ -28,6 +29,11 @@
                                         {{ filter }}, 
                                     {% endfor %}
                                 </p>
+                            </td>
+                            <td>
+                                <a href="{% url 'website:project_detail' pk=project.id %}" class="btn btn-primary">View</a>
+                                <a href="#" class="btn btn-warning">Update</a>
+                                <a href="#" class="btn btn-danger">Delete</a>
                             </td>
                         </tr>
                     {% endfor %}
