--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -21,7 +21,7 @@
                 <tbody>
                     {% for project in projects %}
                         <tr>
-                            <td><a href="{% url 'website:project_detail' pk=project.id %}">{{ project.hash_val }}</a></td>
+                            <td><a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
                             <td>{{ project.created }}</td>
                             <td>
                                 <p>
@@ -31,7 +31,7 @@
                                 </p>
                             </td>
                             <td>
-                                <a href="{% url 'website:project_detail' pk=project.id %}" class="btn btn-primary">View</a>
+                                <a href="{% url 'website:project_detail' slug=project.slug %}" class="btn btn-primary">View</a>
                                 <a href="#" class="btn btn-warning">Update</a>
                                 <a href="#" class="btn btn-danger">Delete</a>
                             </td>
