--- a/website/templates/website/projectsDetail.html
+++ b/website/templates/website/projectsDetail.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <div class="thumbnail">
-            <h1 style="padding-left: 2%;">{{ project.name }}</h1>
+            <h1 style="padding-left: 2%;">{{ project.slug }}</h1>
             <h2 style="padding-left: 2%;"><strong>Project Name: </strong><i>{{ project.input_dataset }}</i></h2>
             {% for filter in project.pfilter.all %}
                 <p style="padding-left: 2%;"><strong>Filter Name: </strong>{{ filter.name }}</p>
