--- a/website/templates/website/projectsDetail.html
+++ b/website/templates/website/projectsDetail.html
@@ -13,11 +13,27 @@
                 <br>
             {% endfor %}
             <h3>Sharing</h3>
-            <form action="" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'website:ajax_search' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% include 'website/form.html' with form=form %}
                 <button class="btn btn-success">Submit</button>
             </form>
         </div>
     </div>
-{% endblock %}
+    {% endblock %}
+
+    {% block script %}
+    <script>
+        $(document).ready(function(){
+            $('input').autocomplete({
+                source: '/ajax/search',
+                minLength: 1,
+                open: function(){
+                    setTimeout(function(){
+                        $('.ui-autocomplete').css('z-index',99);
+                    }, 0);
+                }
+            });
+        });
+    </script>
+    {% endblock %}
