--- a/website/templates/website/projectsDetail.html
+++ b/website/templates/website/projectsDetail.html
@@ -13,7 +13,7 @@
                 <br>
             {% endfor %}
             <h3>Sharing</h3>
-            <form action="{% url 'website:ajax_search' %}" method="POST" enctype="multipart/form-data">
+            <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% include 'website/form.html' with form=form %}
                 <button class="btn btn-success">Submit</button>
