--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -28,39 +28,7 @@
                                     Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
                                 </p>
 
-                                <h2>1. User's Acknowledgment and Acceptance of Terms</h2>
-
-                                <p>PAClab (&quot;Us&quot; or &quot;We&quot;) provides the PAClab site and various
-                                related services (collectively, the &quot;site&quot;) to you, the user, subject
-                                to your compliance with all the terms, conditions, and notices contained or
-                                referenced herein (the &quot;Terms of Use&quot;), as well as any other written
-                                agreement between us and you. In addition, when using particular services or
-                                materials on this site, users shall be subject to any posted rules applicable
-                                to such services or materials that may contain terms and conditions in addition
-                                to those in these Terms of Use. All such guidelines or rules are hereby
-                                incorporated by reference into these Terms of Use.</p>
-
-                                <p>BY USING THIS SITE, YOU AGREE TO BE BOUND BY THESE TERMS OF USE. IF YOU DO
-                                NOT WISH TO BE BOUND BY THE THESE TERMS OF USE, PLEASE EXIT THE SITE NOW. YOUR
-                                REMEDY FOR DISSATISFACTION WITH THIS SITE, OR ANY PRODUCTS, SERVICES, CONTENT,
-                                OR OTHER INFORMATION AVAILABLE ON OR THROUGH THIS SITE, IS TO STOP USING THE
-                                SITE AND/OR THOSE PARTICULAR PRODUCTS OR SERVICES. YOUR AGREEMENT WITH US
-                                REGARDING COMPLIANCE WITH THESE TERMS OF USE BECOMES EFFECTIVE IMMEDIATELY UPON
-                                COMMENCEMENT OF YOUR USE OF THIS SITE.</p>
-
-                                <p>These Terms of Use are effective immediately. We expressly reserve the right
-                                to change these Terms of Use from time to time without notice to you. You
-                                acknowledge and agree that it is your responsibility to review this site and
-                                these Terms of Use from time to time and to familiarize yourself with any
-                                modifications. Your continued use of this site after such modifications will
-                                constitute acknowledgement of the modified Terms of Use and agreement to abide
-                                and be bound by the modified Terms of Use.</p>
-
-                                <p>As used in these Terms of Use, references to our &quot;Affiliates&quot;
-                                include our owners, subsidiaries, affiliated companies, officers, directors,
-                                suppliers, partners, sponsors, and advertisers, and includes (without
-                                limitation) all parties involved in creating, producing, and/or delivering this
-                                site and/or its contents.</p>
+                                {% include 'website/agreement/user_acknowledgement.html' %}
 
                                 <h2>2. Description of Services</h2>
 
