Add services and privacy agreement

--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -28,37 +28,14 @@
                                     Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
                                 </p>
 
+                                <!-- User Acknowledgement & Acceptance of Terms -->
                                 {% include 'website/agreement/user_acknowledgement.html' %}
 
-                                <h2>2. Description of Services</h2>
+                                <!-- Description of Services -->
+                                {% include 'website/agreement/services.html' %}
 
-                                <p>We make various services available on this site. You are responsible for
-                                providing, at your own expense, all equipment necessary to use the services,
-                                including a computer, modem, and Internet access (including payment of all fees
-                                associated with such access).</p>
-
-                                <p>We reserve the sole right to either modify or discontinue the site,
-                                including any of the site's features, at any time with or without notice to
-                                you. We will not be liable to you or any third party should we exercise such
-                                right. Any new features that augment or enhance the then-current services on
-                                this site shall also be subject to these Terms of Use.</p>
-
-                                <h2>3. Registration Data and Privacy</h2>
-
-                                <p>In order to access some of the services on this site, you will be required
-                                to use an account and password that can be obtained by completing our online
-                                registration form, which requests certain information and data
-                                (&quot;Registration Data&quot;), and maintaining and updating your Registration
-                                Data as required. By registering, you agree that all information provided in
-                                the Registration Data is true and accurate and that you will maintain and
-                                update this information as required in order to keep it current, complete, and
-                                accurate.</p>
-
-                                <p>You also grant us the right to disclose to third parties certain
-                                Registration Data about you. The information we obtain through your use of this
-                                site, including your Registration Data, is subject to our <u>Privacy
-                                Policy</u>, which is specifically incorporated by reference into these Terms of
-                                Use.</p>
+                                <!-- Data & Privacy -->
+                                {% include 'website/agreement/privacy.html' %}
 
                                 <h2>4. Conduct on Site</h2>
 
