--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -55,25 +55,11 @@
                                 <!-- Limitation of Liability -->
                                 {% include 'website/agreement/liability.html' %}
 
-                                <h2>10. Indemnification</h2>
+                                <!-- Indemnification -->
+                                {% include 'website/agreement/indemnification.html' %}
 
-                                <p>Upon a request by us, you agree to defend, indemnify, and hold us and our
-                                Affiliates harmless from all liabilities, claims, and expenses, including
-                                attorneys' fees, that arise from your use or misuse of this site. We reserve
-                                the right, at our own expense, to assume the exclusive defense and control of
-                                any matter otherwise subject to indemnification by you, in which event you will
-                                cooperate with us in asserting any available defenses.</p>
-
-                                <h2>11. Security and Password</h2>
-
-                                <p>You are solely responsible for maintaining the confidentiality of your
-                                password and account and for any and all statements made and acts or omissions
-                                that occur through the use of your password and account. Therefore, you must
-                                take steps to ensure that others do not gain access to your password and
-                                account. We will never ask you for your password. You may not
-                                transfer or share your account with anyone, and we reserve the right to
-                                immediately terminate your account  if you do transfer or share your
-                                account.</p>
+                                <!-- Security & Password -->
+                                {% include 'website/agreement/security.html' %}
 
                                 <h2>12. International Use</h2>
 
