Add notices agreement

--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -70,16 +70,8 @@
                                 <!-- Governing Law -->
                                 {% include 'website/agreement/law.html' %}
 
-                                <h2>15. Notices</h2>
-
-                                <p>All notices to a party shall be in writing and shall be made either via
-                                email or conventional mail. Notices to us must be sent to the attention of
-                                Customer Service at complaints@paclab, if by email, or at PAClab Ames, IA if by
-                                conventional mail. Notices to you may be sent to the address supplied by you as
-                                part of your Registration Data. In addition, we may broadcast notices or
-                                messages through the site to inform you of changes to the site or other matters
-                                of importance, and such broadcasts shall constitute notice to you at the time
-                                of sending.</p>
+                                <!-- Notices -->
+                                {% include 'website/agreement/notices.html' %}
 
                                 <h2>16. Entire Agreement</h2>
 
