--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -74,7 +74,7 @@
                                 {% include 'website/agreement/notices.html' %}
 
                                 <!-- Final Agreement -->
-                                {% inclue 'website/agreement/final.html' %}
+                                {% include 'website/agreement/final.html' %}
 
                                 <!-- Miscellaneous -->
                                 {% include 'website/agreement/misc.html' %}
