Change so tagsinput only loads on details page

--- a/website/templates/website/projectsDetail.html
+++ b/website/templates/website/projectsDetail.html
@@ -24,6 +24,8 @@
     {% endblock %}
 
     {% block script %}
+    {% load staticfiles %}
+    <script src="{% static 'website/jquery.tagsinput.js' %}"></script>
     <script>
         $('input:eq(1)').tagsInput({
             autocomplete_url: 'http://127.0.0.1:8000/ajax/search'
